--- a/covidproject.ipynb
+++ b/covidproject.ipynb
@@ -1,49 +1,121 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Task 1 - Data Collection\n",
     "Here you will obtain the required data for the analysis. As described in the project instructions, you will perform a web scrap to obtain data from the NCDC website, import data from the John Hopkins repository, and import the provided external data.\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>States Affected</th>\n",
+       "      <th>No. of Cases (Lab Confirmed)</th>\n",
+       "      <th>No. of Cases (on admission)</th>\n",
+       "      <th>No. Discharged</th>\n",
+       "      <th>No. of Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>72918</td>\n",
+       "      <td>5753</td>\n",
+       "      <td>66561</td>\n",
+       "      <td>604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FCT</td>\n",
+       "      <td>20612</td>\n",
+       "      <td>436</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rivers</td>\n",
+       "      <td>10467</td>\n",
+       "      <td>1280</td>\n",
+       "      <td>9055</td>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kaduna</td>\n",
+       "      <td>9226</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9140</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plateau</td>\n",
+       "      <td>9200</td>\n",
+       "      <td>86</td>\n",
+       "      <td>9055</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  States Affected  No. of Cases (Lab Confirmed)  No. of Cases (on admission)  \\\n",
+       "0           Lagos                         72918                         5753   \n",
+       "1             FCT                         20612                          436   \n",
+       "2          Rivers                         10467                         1280   \n",
+       "3          Kaduna                          9226                           20   \n",
+       "4         Plateau                          9200                           86   \n",
+       "\n",
+       "   No. Discharged  No. of Deaths  \n",
+       "0           66561            604  \n",
+       "1           20000            176  \n",
+       "2            9055            132  \n",
+       "3            9140             66  \n",
+       "4            9055             59  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### A - NCDC Website scrap\n",
     "Website - https://covid19.ncdc.gov.ng/"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -69,43 +141,142 @@
    ]
   },
   {
-   "source": [
-    "# Save the data to a DataFrame object.\n"
-   ],
    "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
-   "execution_count": 7,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>States Affected</th>\n",
+       "      <th>No. of Cases (Lab Confirmed)</th>\n",
+       "      <th>No. of Cases (on admission)</th>\n",
+       "      <th>No. Discharged</th>\n",
+       "      <th>No. of Deaths</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>72918</td>\n",
+       "      <td>5753</td>\n",
+       "      <td>66561</td>\n",
+       "      <td>604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FCT</td>\n",
+       "      <td>20612</td>\n",
+       "      <td>436</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rivers</td>\n",
+       "      <td>10467</td>\n",
+       "      <td>1280</td>\n",
+       "      <td>9055</td>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kaduna</td>\n",
+       "      <td>9226</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9140</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Plateau</td>\n",
+       "      <td>9200</td>\n",
+       "      <td>86</td>\n",
+       "      <td>9055</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  States Affected  No. of Cases (Lab Confirmed)  No. of Cases (on admission)  \\\n",
+       "0           Lagos                         72918                         5753   \n",
+       "1             FCT                         20612                          436   \n",
+       "2          Rivers                         10467                         1280   \n",
+       "3          Kaduna                          9226                           20   \n",
+       "4         Plateau                          9200                           86   \n",
+       "\n",
+       "   No. Discharged  No. of Deaths  \n",
+       "0           66561            604  \n",
+       "1           20000            176  \n",
+       "2            9055            132  \n",
+       "3            9140             66  \n",
+       "4            9055             59  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save the data to a DataFrame object.\n",
+    "url = 'https://covid19.ncdc.gov.ng/'\n",
+    "tables = pd.read_html(url)\n",
+    "\n",
+    "df = tables[0]\n",
+    "df.head()\n"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### B - John Hopkins Data Repository\n",
     "Here you will obtain data from the John Hopkins repository. Your task here involves saving the data from the GitHub repo link to DataFrame for further analysis. Find the links below. \n",
     "* Global Daily Confirmed Cases - Click [Here](https://github.com/CSSEGISandData/COVID-19/blob/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv)\n",
     "* Global Daily Recovered Cases - Click [Here](https://github.com/CSSEGISandData/COVID-19/blob/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_recovered_global.csv)\n",
     "* Global Daily Death Cases - Click [Here](https://github.com/CSSEGISandData/COVID-19/blob/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_deaths_global.csv)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#[Write Your Code Here]\n",
     "\n"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 8,
-   "outputs": []
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### C - External Data \n",
     "* Save the external data to a DataFrame\n",
     "* External Data includes but not limited to: `covid_external.csv`, `Budget data.csv`, `RealGDP.csv`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -117,12 +288,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Task 2 - View the data\n",
     "Obtain basic information about the data using the `head()` and `info()` method."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -134,6 +305,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Task 3 - Data Cleaning and Preparation\n",
     "From the information obtained above, you will need to fix the data format. \n",
@@ -143,16 +316,14 @@
     "* Rename the columns of the scraped data.\n",
     "* Remove comma(,) in numerical data\n",
     "* Extract daily data for Nigeria from the Global daily cases data"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO A - Clean the scraped data"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -171,83 +342,85 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO B - Get a Pandas DataFrame for Daily Confirmed Cases in Nigeria. Columns are Date and Cases"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO C - Get a Pandas DataFrame for Daily Recovered Cases in Nigeria. Columns are Date and Cases"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO D - Get a Pandas DataFrame for Daily Death Cases in Nigeria. Columns are Date and Cases"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Task 4 - Analysis\n",
     "Here you will perform some analyses on the datasets. You are welcome to communicate findings in charts and summary. \n",
     "<br>\n",
     "We have included a few TODOs to help with your analysis. However, do not let this limit your approach, feel free to include more, and be sure to support your findings with chart and summary "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO A - Generate a plot that shows the Top 10 states in terms of Confirmed Covid cases by Laboratory test"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO B - Generate a plot that shows the Top 10 states in terms of Discharged Covid cases. Hint - Sort the values"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO D - Plot the top 10 Death cases"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO E - Generate a line plot for the total daily confirmed, recovered and death cases in Nigeria"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO F - \n",
     "* Determine the daily infection rate, you can use the Pandas `diff` method to find the derivate of the total cases.\n",
     "* Generate a line plot for the above"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO G - \n",
     "* Calculate maximum infection rate for a day (Number of new cases)\n",
     "* Find the date"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO H - Determine the relationship between the external dataset and the NCDC COVID-19 dataset. \n",
     "Here you will generate a line plot of top 10 confirmed cases and the overall community vulnerability index on the same axis. From the graph, explain your observation.\n",
@@ -256,31 +429,31 @@
     "* Combine the two dataset together on a common column(states)\n",
     "* Create a new dataframe for plotting. This DataFrame will contain top 10 states in terms of confirmed cases i.e sort by confirmed cases. ** Hint: Check out Pandas [nlargest](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.nlargest.html) function. This [tutorial](https://cmdlinetips.com/2019/03/how-to-select-top-n-rows-with-the-largest-values-in-a-columns-in-pandas/) can help out ** \n",
     "* Plot both variable on the same axis. Check out this [tutorial](http://kitchingroup.cheme.cmu.edu/blog/2013/09/13/Plotting-two-datasets-with-very-different-scales/)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO I - Determine the relationship between the external dataset and the NCDC COVID-19 dataset. \n",
     "* Here you will generate a regression plot between two variables to visualize the linear relationships - Confirmed Cases and Population Density.\n",
     "Hint: Check out Seaborn [Regression Plot](https://seaborn.pydata.org/generated/seaborn.regplot.html).\n",
     "* Provide a summary of your observation"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO J - \n",
     "* Provide more analyses by extending TODO G & H. Meaning, determine relationships between more features.\n",
     "* Provide a detailed summary of your findings. \n",
     "* Note that you can have as many as possible."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### TODO L - \n",
     "Determine the effect of the Pandemic on the economy. To do this, you will compare the Real GDP value Pre-COVID-19 with Real GDP in 2020 (COVID-19 Period, especially Q2 2020)\n",
@@ -292,28 +465,47 @@
     "* Set your quarter legend to lower left.\n",
     "* Using `axhline`, draw a horizontal line through the graph at the value of Q2 2020.\n",
     "* Write out your observation"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Note: Do not limit your analysis to the provided TODOs. Perform more analyses e.g \n",
     "* Check for more external dataset\n",
     "* Ask more questions & find the right answers by exploring the data"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
-   "source": [],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
