added data from repos

--- a/covidproject.ipynb
+++ b/covidproject.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -177,42 +177,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Lagos</td>\n",
-       "      <td>72918</td>\n",
-       "      <td>5753</td>\n",
+       "      <td>73265</td>\n",
+       "      <td>6100</td>\n",
        "      <td>66561</td>\n",
        "      <td>604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>FCT</td>\n",
-       "      <td>20612</td>\n",
-       "      <td>436</td>\n",
-       "      <td>20000</td>\n",
+       "      <td>20666</td>\n",
+       "      <td>482</td>\n",
+       "      <td>20008</td>\n",
        "      <td>176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Rivers</td>\n",
-       "      <td>10467</td>\n",
-       "      <td>1280</td>\n",
-       "      <td>9055</td>\n",
-       "      <td>132</td>\n",
+       "      <td>10701</td>\n",
+       "      <td>1099</td>\n",
+       "      <td>9465</td>\n",
+       "      <td>137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Kaduna</td>\n",
-       "      <td>9226</td>\n",
-       "      <td>20</td>\n",
-       "      <td>9140</td>\n",
+       "      <td>9258</td>\n",
+       "      <td>46</td>\n",
+       "      <td>9146</td>\n",
        "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Plateau</td>\n",
-       "      <td>9200</td>\n",
-       "      <td>86</td>\n",
+       "      <td>9205</td>\n",
+       "      <td>90</td>\n",
        "      <td>9055</td>\n",
-       "      <td>59</td>\n",
+       "      <td>60</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -220,21 +220,21 @@
       ],
       "text/plain": [
        "  States Affected  No. of Cases (Lab Confirmed)  No. of Cases (on admission)  \\\n",
-       "0           Lagos                         72918                         5753   \n",
-       "1             FCT                         20612                          436   \n",
-       "2          Rivers                         10467                         1280   \n",
-       "3          Kaduna                          9226                           20   \n",
-       "4         Plateau                          9200                           86   \n",
+       "0           Lagos                         73265                         6100   \n",
+       "1             FCT                         20666                          482   \n",
+       "2          Rivers                         10701                         1099   \n",
+       "3          Kaduna                          9258                           46   \n",
+       "4         Plateau                          9205                           90   \n",
        "\n",
        "   No. Discharged  No. of Deaths  \n",
        "0           66561            604  \n",
-       "1           20000            176  \n",
-       "2            9055            132  \n",
-       "3            9140             66  \n",
-       "4            9055             59  "
+       "1           20008            176  \n",
+       "2            9465            137  \n",
+       "3            9146             66  \n",
+       "4            9055             60  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,12 +261,432 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>1/22/20</th>\n",
+       "      <th>1/23/20</th>\n",
+       "      <th>1/24/20</th>\n",
+       "      <th>1/25/20</th>\n",
+       "      <th>1/26/20</th>\n",
+       "      <th>1/27/20</th>\n",
+       "      <th>...</th>\n",
+       "      <th>8/25/21</th>\n",
+       "      <th>8/26/21</th>\n",
+       "      <th>8/27/21</th>\n",
+       "      <th>8/28/21</th>\n",
+       "      <th>8/29/21</th>\n",
+       "      <th>8/30/21</th>\n",
+       "      <th>8/31/21</th>\n",
+       "      <th>9/1/21</th>\n",
+       "      <th>9/2/21</th>\n",
+       "      <th>9/3/21</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>33.93911</td>\n",
+       "      <td>67.709953</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>41.15330</td>\n",
+       "      <td>20.168300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>28.03390</td>\n",
+       "      <td>1.659600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>42.50630</td>\n",
+       "      <td>1.521800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>-11.20270</td>\n",
+       "      <td>17.873900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 595 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Province/State Country/Region       Lat       Long  1/22/20  1/23/20  \\\n",
+       "0            NaN    Afghanistan  33.93911  67.709953        0        0   \n",
+       "1            NaN        Albania  41.15330  20.168300        0        0   \n",
+       "2            NaN        Algeria  28.03390   1.659600        0        0   \n",
+       "3            NaN        Andorra  42.50630   1.521800        0        0   \n",
+       "4            NaN         Angola -11.20270  17.873900        0        0   \n",
+       "\n",
+       "   1/24/20  1/25/20  1/26/20  1/27/20  ...  8/25/21  8/26/21  8/27/21  \\\n",
+       "0        0        0        0        0  ...        0        0        0   \n",
+       "1        0        0        0        0  ...        0        0        0   \n",
+       "2        0        0        0        0  ...        0        0        0   \n",
+       "3        0        0        0        0  ...        0        0        0   \n",
+       "4        0        0        0        0  ...        0        0        0   \n",
+       "\n",
+       "   8/28/21  8/29/21  8/30/21  8/31/21  9/1/21  9/2/21  9/3/21  \n",
+       "0        0        0        0        0       0       0       0  \n",
+       "1        0        0        0        0       0       0       0  \n",
+       "2        0        0        0        0       0       0       0  \n",
+       "3        0        0        0        0       0       0       0  \n",
+       "4        0        0        0        0       0       0       0  \n",
+       "\n",
+       "[5 rows x 595 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#[Write Your Code Here]\n",
+    "gdc =pd.read_csv('https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv')\n",
+    "gdc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province/State</th>\n",
+       "      <th>Country/Region</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "      <th>1/22/20</th>\n",
+       "      <th>1/23/20</th>\n",
+       "      <th>1/24/20</th>\n",
+       "      <th>1/25/20</th>\n",
+       "      <th>1/26/20</th>\n",
+       "      <th>1/27/20</th>\n",
+       "      <th>...</th>\n",
+       "      <th>8/25/21</th>\n",
+       "      <th>8/26/21</th>\n",
+       "      <th>8/27/21</th>\n",
+       "      <th>8/28/21</th>\n",
+       "      <th>8/29/21</th>\n",
+       "      <th>8/30/21</th>\n",
+       "      <th>8/31/21</th>\n",
+       "      <th>9/1/21</th>\n",
+       "      <th>9/2/21</th>\n",
+       "      <th>9/3/21</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>33.93911</td>\n",
+       "      <td>67.709953</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>41.15330</td>\n",
+       "      <td>20.168300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>28.03390</td>\n",
+       "      <td>1.659600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>42.50630</td>\n",
+       "      <td>1.521800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>-11.20270</td>\n",
+       "      <td>17.873900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 595 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Province/State Country/Region       Lat       Long  1/22/20  1/23/20  \\\n",
+       "0            NaN    Afghanistan  33.93911  67.709953        0        0   \n",
+       "1            NaN        Albania  41.15330  20.168300        0        0   \n",
+       "2            NaN        Algeria  28.03390   1.659600        0        0   \n",
+       "3            NaN        Andorra  42.50630   1.521800        0        0   \n",
+       "4            NaN         Angola -11.20270  17.873900        0        0   \n",
+       "\n",
+       "   1/24/20  1/25/20  1/26/20  1/27/20  ...  8/25/21  8/26/21  8/27/21  \\\n",
+       "0        0        0        0        0  ...        0        0        0   \n",
+       "1        0        0        0        0  ...        0        0        0   \n",
+       "2        0        0        0        0  ...        0        0        0   \n",
+       "3        0        0        0        0  ...        0        0        0   \n",
+       "4        0        0        0        0  ...        0        0        0   \n",
+       "\n",
+       "   8/28/21  8/29/21  8/30/21  8/31/21  9/1/21  9/2/21  9/3/21  \n",
+       "0        0        0        0        0       0       0       0  \n",
+       "1        0        0        0        0       0       0       0  \n",
+       "2        0        0        0        0       0       0       0  \n",
+       "3        0        0        0        0       0       0       0  \n",
+       "4        0        0        0        0       0       0       0  \n",
+       "\n",
+       "[5 rows x 595 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdr = pd.read_csv('https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_recovered_global.csv')\n",
+    "gdr.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#[Write Your Code Here]\n",
-    "\n"
+    "gdd = pd.read_csv('')"
    ]
   },
   {
